# LobbyViewPythonPackage

./: .coverage  .gitignore  .readthedocs.yaml  LobbyView.py  README.md  dev_notes.txt  make_readme.py  pyproject.toml  readme_header.md  readme_instructions.md  requirements.txt  sandbox.py  test.py
.github/workflows/: publish.yml  python-package.yml
docs/: generate_readme.py  requirements.txt
docs/source/: api.rst  conf.py  detailed_parameter_values.rst  examples.rst  index.rst  installation.rst  introduction.rst  registration.rst  troubleshooting.rst  usage.rst
docs/source/vignettes/: journalist_vignette.ipynb  microsoft_vignette.ipynb
src/lobbyview/: .coverage  LobbyView.py  exceptions.py
src/lobbyview.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: .coverage  corporate_vignette.py  doctests.py  journalist_vignette.ipynb  journalist_vignette.py  microsoft_vignette.ipynb  sandbox.py  test-wrapper.py  test_lobbyview.py  test_wrapper.py  vignette.py
